# cairplay

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
cairplay/: CMakeLists.txt
cairplay/include/: platform.h  raop_sink.h  rtp.h  util.h
cairplay/src/: log_util.cpp  raop.cpp  rtp.cpp  util.cpp
targets/cli/: CMakeLists.txt  main.cpp
